# polyhedra

./: .gitignore  pyproject.toml
.github/workflows/: pylint.yml
media/Tex/: 1d29bcbcaafc8f11.dvi  1d29bcbcaafc8f11.tex  2870d31263cf566e.dvi  2870d31263cf566e.tex  2a1baaedf9b9b924.tex  2e8d91c066ebd00d.tex  4b3ee5b52720e2ee.dvi  4b3ee5b52720e2ee.tex  5bac3a82abe4d7db.dvi  5bac3a82abe4d7db.tex  79fb4f790de00cac.dvi  905299c4bf008461.tex  ae82190a89dd1ccb.dvi  ae82190a89dd1ccb.tex  c748c2b7255cc42d.dvi  c748c2b7255cc42d.tex  ce4deb66bedbf855.dvi  d44da29d0676df00.dvi  e96af713c716faaa.dvi  f10e90c24fa62c81.dvi
media/videos/title/2160p60/partial_movie_files/Title/: partial_movie_file_list.txt
media/videos/title/480p15/partial_movie_files/Title/: partial_movie_file_list.txt
polyhedra/: cube.py  explanation.py  intro.py  scene.py
scenes/: title.py
