[tool.poetry]
name = "polyhedra"
version = "0.1.0"
description = ""
authors = ["Vivaan Verma <vivaan.verma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
manim = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
